[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/SceneBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/img/btn-help_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn-help.png" type="Texture" id=5]
[ext_resource path="res://assets/img/btn-main-start.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btn-main-start-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/img/btn-main-start-pressed.png" type="Texture" id=8]
[ext_resource path="res://themes/small_font.tres" type="DynamicFont" id=9]

[node name="MainMenu" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer" index="0"]
margin_right = 944.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "Classroom Tasking"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="1"]
margin_top = 60.0
margin_right = 944.0
margin_bottom = 83.0
custom_constants/separation = 20
alignment = 1

[node name="EditTasksButton" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="0"]
margin_left = 427.0
margin_right = 517.0
margin_bottom = 23.0
text = "Select Tasks"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer" index="2"]
margin_top = 93.0
margin_right = 944.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/CenterContainer" index="0"]
margin_left = 360.0
margin_right = 584.0
margin_bottom = 224.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
stretch_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer" index="3"]
margin_top = 327.0
margin_right = 944.0
margin_bottom = 358.0
custom_fonts/font = ExtResource( 9 )
text = "Saved Sessions:"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer" index="4"]
margin_top = 368.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_vertical = 3

[node name="SavedSessionList" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer" index="0"]
margin_right = 944.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control" index="1"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 68.0

[node name="Container" type="Control" parent="CanvasLayer/Control/HBoxContainer2" index="0"]
margin_right = 912.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HelpButton" type="TextureButton" parent="CanvasLayer/Control/HBoxContainer2" index="1"]
margin_left = 916.0
margin_right = 944.0
margin_bottom = 28.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/EditTasksButton" to="." method="_on_EditTasksButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer2/HelpButton" to="." method="_on_HelpButton_pressed"]
